added UI / gameover / state logic to manager

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,9 +1,14 @@
 
 
-#UI #background {
+canvas {
     position:absolute;
+    top:0
 }
 
-#main{
+#background {
+    position:relative;
+}
+
+.canvas-container {
     position: relative;
 }
